done writing GeminiService